--- a/report/report.tex
+++ b/report/report.tex
@@ -153,7 +153,9 @@ discussion (for instance, we saw some of the differences between c++
 11 and 17 or some corner cases of python behavior when mixing mutable
 and non-mutable types) and the no non-sense approach to the tools
 (git, make \& co.). For instance, we have been invited to fork the
-teacher's git repo.\ and work on our copy, merging the new code that
+teacher's git repo.\ and work on
+\href{https://github.com/gamboz/advanced_programming_2019-20}
+     {our copy}, merging the new code that
 the teacher pushed to his repository before each lesson. This simple
 procedure let us gain confidence with git.
 
